# digichem-core

./: .gitattributes  .gitignore  .gitmodules  .project  CHANGELOG.md  COPYING.md  README.md  _silico_resume.CentOS-7.7.spec  changelog  completion.sh  creport.CentOS-7.7.spec  cresult.CentOS-7.7.spec  csubmit.CentOS-7.7.spec  dependencies  dist_current.py  make-changelog  pack_current.py  package  pyproject.toml  setup.py  todo.odt  todo.txt
.github/workflows/: python-main-pull.yml  python-main-push.yml  python-publish.yml  python-pypi-publish.yml  python-test.yml  release-on-tag.yml
compile/: README
compile/CentOS-6.10/: _silico_resume.CentOS-6.10.spec  base.py  compile.CentOS-6.10  creport.CentOS-6.10.spec  cresult.CentOS-6.10.spec  csubmit.CentOS-6.10.spec  silico.CentOS-6.10.spec
compile/CentOS-7.7/: _silico_resume.CentOS-7.7.spec  base.py  compile.CentOS-7.7  creport.CentOS-7.7.spec  cresult.CentOS-7.7.spec  csubmit.CentOS-7.7.spec
digichem/: __init__.py  basis.py  datas.py  log.py  memory.py  translate.py
digichem/config/: README  __init__.py  base.py  configurable.py  loader.py  locations.py  main.py  parse.py  parser.py  silico.py  util.py
digichem/data/: README  functionals.csv  solvents.csv
digichem/exception/: __init__.py  base.py  configurable.py  uncatchable.py
digichem/file/: __init__.py  babel.py  base.py  cube.py  fchk.py  gaussian.py  prattle.py  types.py
doc/: Silico Quick Reference.odt
freeze/: README
install/: install-silico
logo/: mockup.odg  mockup2.odg
silico/: __init__.py  authors.py  base.py  log.py  logging.py
(+1366 files in other folders)
